@@ -4,7 +4,7 @@ plugins {
     eclipse
     id("com.gradleup.shadow") version "8.3.7"
     id("com.github.ben-manes.versions") version "0.51.0"
-    id("org.teavm") version "0.9.2"
+    id("org.teavm") version "0.13.0"
 }
 
 group = "com.example"
@@ -23,17 +23,16 @@ java {
 dependencies {
     implementation("io.javalin:javalin:6.3.0")
     implementation("org.slf4j:slf4j-simple:2.0.13")
-    implementation("org.teavm:teavm-classlib:0.9.2")
-    implementation("org.teavm:teavm-tooling:0.9.2")
+    implementation("org.teavm:teavm-classlib:0.13.0")
+    implementation("org.teavm:teavm-tooling:0.13.0")
+    implementation("org.teavm:teavm-jso-apis:0.13.0")
+    implementation("org.teavm:teavm-jso:0.13.0")
 }
 
 application {
     mainClass.set("scorta.Backend")
 }
 
-tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.add("--enable-preview")
-}
 
 tasks.withType<JavaExec>().configureEach {
     jvmArgs("--enable-preview")
@@ -43,7 +42,12 @@ teavm {
     all {
         mainClass = "scorta.Frontend"
     }
-    wasm {
+    js {
+        targetFileName = "client.js"
+        outputDir = file("src/main/resources/public")
+    }
+    wasmGC {
         targetFileName = "client.wasm"
+        outputDir = file("src/main/resources/public")
     }
 }
